force-app/main/default/objects/Timesheet_entry__c/Timesheet_entry__c.object-meta.xml
<CustomObject>
    <label>Timesheet entry</label>
    <nameField>
        <label>Timesheet entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timesheet entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>