force-app/main/default/objects/Timesheet_entry__c/fields/Attachment_content_version_ID__c.field-meta.xml
<CustomField>
    <fullName>Attachment_content_version_ID__c</fullName>
    <label>Attachment content version ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>