force-app/main/default/objects/Timesheet_entry__c/fields/Attachment_document_ID__c.field-meta.xml
<CustomField>
    <fullName>Attachment_document_ID__c</fullName>
    <label>Attachment document ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>