force-app/main/default/objects/Timesheet_entry__c/fields/Attachment_name__c.field-meta.xml
<CustomField>
    <fullName>Attachment_name__c</fullName>
    <label>Attachment name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>