force-app/main/default/objects/Timesheet_entry__c/fields/From_time__c.field-meta.xml
<CustomField>
    <fullName>From_time__c</fullName>
    <label>From time</label>
    <type>Time</type>
</CustomField>