force-app/main/default/objects/Timesheet_entry__c/fields/Is_record_type_default__c.field-meta.xml
<CustomField>
    <fullName>Is_record_type_default__c</fullName>
    <formula>IF(RecordType.Name = &quot;Default&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is record type default</label>
    <type>Checkbox</type>
</CustomField>