force-app/main/default/objects/Timesheet_entry__c/fields/Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Timesheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet</label>
    <referenceTo>Timesheet__c</referenceTo>
    <relationshipLabel>Timesheet entries</relationshipLabel>
    <relationshipName>Timesheet_entries</relationshipName>
    <type>Lookup</type>
</CustomField>