force-app/main/default/objects/Timesheet_entry__c/fields/Travel_expenses__c.field-meta.xml
<CustomField>
    <fullName>Travel_expenses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel expenses</label>
    <type>Checkbox</type>
</CustomField>